# hello_bevy

./: Cargo.toml
assets/lua/: hello_world.lua  update.lua
src/: main.rs  manifest.rs  scripting.rs
