[package]
name = "hello_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avian2d = "0.1.1"
avian3d = "0.1.1"
bevy = { version = "0.14.1", features = ["file_watcher"] }
bevy-inspector-egui = "0.25.1"
bevy_console = "0.11.1"
bevy_dev_console = "0.0.0"
bevy_mod_scripting = "0.6.0"
bevy_scriptum = { version = "0.6.0", features = ["lua"] }
bevy_tween = "0.6.0"
leafwing-input-manager = "0.14.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
